# interview-helper

./: .env.example  .gitignore  README.md  pyproject.toml
src/: assistant.py  audio.py  config.py  main.py  profiles.py  transcriber.py  writer.py
